# openwrangler

./: .gitattributes  .gitignore  .prettierignore  .vscodeignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.extension-test.json  tsconfig.extension.json  tsconfig.json  tsconfig.webview.json  vite.config.ts
.github/: codeql-config.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  cross-platform.yml  performance.yml  release.yml
docs/: architecture.md  feature-parity.md  reference.md  releasing.md  testing.md
fixtures/: example.ipynb  legacy.xls.gz.base64  sample.csv  sample.jsonl  sample.tsv  view-literal-contract.json
protocol/: data-explorer.v2.schema.json  openwrangler.v2.schema.json
python/: pyproject.toml
python/benchmarks/: runtime_performance.py
python/data_wrangler_runtime/: __init__.py  kernel_agent.py  notebook.py  operations.py  protocol.py  server.py  session.py
python/data_wrangler_runtime/engines/: base.py  pandas_engine.py  polars_engine.py
python/openwrangler_runtime/: __init__.py  _column_binding.py  by_example.py  kernel_agent.py  lineage.py  notebook.py  operations.py  protocol.py  server.py  session.py  version.py
python/openwrangler_runtime/engines/: __init__.py  base.py  duckdb_engine.py  pandas_engine.py  polars_engine.py  registry.py
python/tests/: test_by_example.py  test_column_binding.py  test_data_edge_cases.py  test_duckdb_engine.py  test_engine_lifecycle.py  test_engine_registry.py  test_filter_logic.py  test_group_numeric_parity.py  test_integer_envelope_adapters.py  test_integer_widening.py  test_kernel_agent.py  test_lineage.py  test_notebook.py  test_operation_edges.py  test_operations.py  test_pandas_engine.py  test_performance_backends.py  test_performance_harness.py  test_polars_engine.py  test_protocol.py  test_real_kernel.py  test_server_protocol.py  test_session_cache.py  test_session_column_binding.py  test_session_concurrency.py  test_session_editing.py  test_session_transactions.py  test_step_inspection.py  test_typed_cells.py
scripts/: capture-screenshots.mjs  check-docs.mjs  check-licenses.mjs  clean.mjs  download-editor.mjs  editor-acceptance-artifact.mjs  editor-acceptance-artifact.test.mjs  editor-acceptance-evidence.mjs  editor-acceptance-evidence.test.mjs  editor-acceptance.mjs  editor-acceptance.test.mjs  generate-protocol.mjs  generate-reference.mjs  packaged-editor-orchestration.mjs  packaged-editor-orchestration.test.mjs  run-extension-tests.mjs  run-packaged-editor-tests.mjs  run-pyright.mjs  run-python.mjs  test-webview-accessibility.mjs  verify-vsix.mjs  vsix-contents.d.mts  vsix-contents.mjs  windows-job-supervisor.ps1
src/extension/: activate.ts  configuration.ts  dataBridge.ts  identity.ts  (+9 more)
(+72 files in other folders)
