[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openwrangler-runtime"
version = "0.2.0a2"
description = "Runtime backend for the Open Wrangler VS Code extension."
requires-python = ">=3.10"
dependencies = [
  "polars",
  "pandas",
  "pyarrow",
  "openpyxl",
  "ipython"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "nbclient",
  "nbformat",
  "ipykernel",
  "fastexcel",
  "tornado>=6.5.7",
  "ruff",
  "pip-audit"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["openwrangler_runtime*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["openwrangler_runtime", "tests"]
