[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openwrangler-runtime"
dynamic = ["version"]
description = "Runtime backend for the Open Wrangler VS Code extension."
requires-python = ">=3.10"
dependencies = [
  "polars",
  "duckdb>=1.4.5,<1.6",
  "pandas",
  "pyarrow",
  "openpyxl>=3.1.5",
  "xlrd>=2.0.1",
  "ipython"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "nbclient",
  "nbformat",
  "ipykernel",
  "fastexcel>=0.9",
  "tornado>=6.5.7",
  "ruff",
  "pip-audit"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["openwrangler_runtime*"]

[tool.setuptools.dynamic]
version = { attr = "openwrangler_runtime.version.__version__" }

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["openwrangler_runtime", "tests"]
